@@ -4,9 +4,6 @@ import it.pagopa.selfcare.commons.base.security.PartyRole;
 import it.pagopa.selfcare.external_api.connector.rest.client.UserApiRestClient;
 import it.pagopa.selfcare.external_api.connector.rest.mapper.UserMapper;
 import it.pagopa.selfcare.external_api.connector.rest.mapper.UserMapperImpl;
-import it.pagopa.selfcare.external_api.connector.rest.mapper.UserMapper;
-import it.pagopa.selfcare.external_api.connector.rest.mapper.UserMapperImpl;
-import it.pagopa.selfcare.user.generated.openapi.v1.api.UserControllerApi;
 import it.pagopa.selfcare.user.generated.openapi.v1.dto.SearchUserDto;
 import it.pagopa.selfcare.user.generated.openapi.v1.dto.UserDetailResponse;
 import it.pagopa.selfcare.user.generated.openapi.v1.dto.UserInstitutionResponse;
@@ -16,16 +13,12 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.http.ResponseEntity;
-
-import java.util.List;
-import java.util.Optional;
-
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
@@ -47,57 +40,37 @@ class UserMsConnectorImplTest {
         final List<PartyRole> commonsPartyRoles = List.of(PartyRole.OPERATOR);
         when(userApiRestClient._usersGet(any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(new ResponseEntity<>(List.of(new UserInstitutionResponse()), HttpStatus.OK));
         userMsConnector.getUsersInstitutions(null, null, null, null, null, null, commonsPartyRoles, null);
-
         verify(userApiRestClient, times(1))._usersGet(null, null, null, null, List.of(it.pagopa.selfcare.user.generated.openapi.v1.dto.PartyRole.OPERATOR), null, null, null);
     }
 
     @Test
     void getUserInstitutions_nullRoles(){
         when(userApiRestClient._usersGet(any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(new ResponseEntity<>(List.of(new UserInstitutionResponse()), HttpStatus.OK));
-
         userMsConnector.getUsersInstitutions(null, null, null, null, null, null, null, null);
-
         verify(userApiRestClient, times(1))._usersGet(null, null, null, null, Collections.emptyList(), null, null, null);
-    }
-
-}
-    private UserControllerApi userControllerApi;
-
-    @Spy
-    private UserMapper userMapper = new UserMapperImpl();
-
-    @Test
-    void getUsersInstitutions() {
-        final String userId = "userId";
-        when(userControllerApi._usersGet(null, null, null, null, null, null, null, userId))
-                .thenReturn(ResponseEntity.of(Optional.of(List.of(new UserInstitutionResponse()))));
-        userMsConnector.getUsersInstitutions(userId, null);
-        verify(userControllerApi, times(1))
-                ._usersGet(null, null, null, null, null, null, null, userId);
-        verifyNoMoreInteractions(userControllerApi);
     }
 
     @Test
     void getUsersInstitutionsWithProducts() {
         final String userId = "userId";
         final String productId = "prod-1";
-        when(userControllerApi._usersGet(null, null, null, List.of(productId), null, null, null, userId))
+        when(userApiRestClient._usersGet(null, null, null, List.of(productId), Collections.emptyList(), null, null, userId))
                 .thenReturn(ResponseEntity.of(Optional.of(List.of(new UserInstitutionResponse()))));
-        userMsConnector.getUsersInstitutions(userId, List.of(productId));
-        verify(userControllerApi, times(1))
-                ._usersGet(null, null, null, List.of(productId), null, null, null, userId);
-        verifyNoMoreInteractions(userControllerApi);
+        userMsConnector.getUsersInstitutions(userId, null, null, null, null , List.of(productId), null, null);
+        verify(userApiRestClient, times(1))
+                ._usersGet(null, null, null, List.of(productId), Collections.emptyList(), null, null, userId);
+        verifyNoMoreInteractions(userApiRestClient);
     }
 
     @Test
     void searchUserByExternalId() {
         final String fiscalCode = "fiscalCode";
         SearchUserDto searchUserDto = new SearchUserDto(fiscalCode);
-        when(userControllerApi._usersSearchPost(null, searchUserDto))
+        when(userApiRestClient._usersSearchPost(null, searchUserDto))
                 .thenReturn(ResponseEntity.of(Optional.of(new UserDetailResponse())));
         userMsConnector.searchUserByExternalId(fiscalCode);
-        verify(userControllerApi, times(1))
+        verify(userApiRestClient, times(1))
                 ._usersSearchPost(null, searchUserDto);
-        verifyNoMoreInteractions(userControllerApi);
+        verifyNoMoreInteractions(userApiRestClient);
     }
 }
